--- a/app/views/prices/sale_no_sale.html.erb
+++ b/app/views/prices/sale_no_sale.html.erb
@@ -24,19 +24,19 @@
       <%= label_tag :regular_price, 'regular price' %>
       <%= text_field_tag :regular_price %>
     </div>
-  </div><br></br>
+  </div>
   <div class="form-group">
     <div class="col-sm-10">
       <%= label_tag :sale_price, 'sale price' %>
       <%= text_field_tag :sale_price %>
     </div>
-  </div><br></br>
+  </div>
   <div class="form-group">
     <div class="col-sm-10">
       <%= label_tag :employee_discount, 'employee discount' %>
       <%= select_tag :employee_discount, options_for_select([["Select One",""],['30%', '0.3'], ['40%', '0.4'], ['50%', '0.5']]) %>
     </div>
-  </div><br></br>
+  </div>
   <!--<div class="form-group">-->
   <!--<%#= label_tag :emp_dis_on_sale_price, :class => "col-sm-2 control-label" %>-->
   <!--<div class="col-sm-10">-->
