--- a/app/views/prices/sale_no_sale.html.erb
+++ b/app/views/prices/sale_no_sale.html.erb
@@ -27,6 +27,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-10">
+      <h4>(10% discount is calculated after entering the sale price)</h4>
       <%= label_tag :sale_price, 'sale price' %>
       <%= text_field_tag :sale_price %>
     </div>
