--- a/app/views/prices/sale_no_sale.html.erb
+++ b/app/views/prices/sale_no_sale.html.erb
@@ -27,9 +27,9 @@
   </div>
   <div class="form-group">
     <div class="col-sm-10">
-      <h4>(10% discount is calculated after entering the sale price)</h4>
       <%= label_tag :sale_price, 'sale price' %>
       <%= text_field_tag :sale_price %>
+      <em>(10% discount will be calculated on the entered sale price)</em>
     </div>
   </div>
   <div class="form-group">
